Fixed gap in header

--- a/src/Header.css
+++ b/src/Header.css
@@ -15,6 +15,7 @@
 }
 
 .stuff {
+    padding-top: 2%;
     align-content: flex-start;
     /*flex-wrap: wrap; 
     display: inline-flex;
@@ -23,5 +24,8 @@
     flex-wrap: wrap;
     flex-direction: column;
     
+}
 
+h1 {
+    line-height: 0;
 }
